--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack.js",
     "live-server": "http-server ./ --cors",
-    "start": "npm run build && npm run live-server"
+    "start": "npm run build && npm run live-server",
+    "serve": "webpack-dev-server --open"
   },
   "author": "Sneha Periwal",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "typescript": "3.5.2",
     "typescript-eslint-parser": "22.0.0",
     "webpack": "4.35.0",
-    "webpack-cli": "3.3.5"
+    "webpack-cli": "3.3.5",
+    "webpack-dev-server": "^3.10.3"
   }
 }
