--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/graphlib": "2.1.5",
     "@types/jquery": "3.3.30",
     "@types/lodash": "4.14.135",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "0.11.1",
     "ts-loader": "6.0.4",
     "typescript": "3.5.2",
