--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@types/graphlib": "2.1.5",
     "@types/jquery": "3.3.30",
     "@types/lodash": "4.14.135",
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "0.11.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "ts-loader": "6.0.4",
     "typescript": "3.5.2",
     "typescript-eslint-parser": "22.0.0",
